# MessageCoder

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  clear.sh
include/: mess_coder.h
python/: messcoder.py
src/: mess_coder.h
src/client/: CMakeLists.txt  main.c  rbuf.c  rbuf.h
src/example/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt  mess_coder.c
src/server/: CMakeLists.txt  main.c
